# LatticeEngine

./: CMakeLists.txt
engine/: CMakeLists.txt  core.h  coreOpenGL.h  engine.h
engine/generic/: application.cpp  application.h  entryPoint.h  renderer.h  rng.h
engine/glfw_opengl/: glfw_opengl.cpp  glfw_opengl.h  opengl_renderer.h
sandbox/: main.cpp
sandbox/assets/: texture.frag  texture.vert  triangle.frag  triangle.vert
sandbox/assets/shaders/: opengl2.frag  opengl2.vert  quadAspect.vert  quadFullscreen.vert  quadTexture.frag
